load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
)

load("@drake//tools/install:install.bzl", "install")
load("//tools/install:install_data.bzl", "install_data")

package(
    default_visibility = [":__subpackages__"],
)

drake_cc_binary(
    name = "franka_panda_simulation",
    srcs = [
        "franka_panda_simulation.cc",
    ],
    data = [
        ":models",
        "//manipulation/models/franka_description:models",
        "//tools:drake_visualizer",
    ],
    deps = [
        "//common:find_resource",
        "//common:add_text_logging_gflags",
        "//geometry:drake_visualizer",
        "//lcm",
        "//lcm:drake_lcm",
        "//systems/framework:diagram_builder",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework",
        "//systems/primitives:constant_vector_source",
        "//systems/controllers",
    ],
)

# Installs model data
install_data()

